Don't set fixed with on comment notifications dropdown (Other languages' word can break the dropdown's layout)

--- a/client/scss/components/_comments-notification-dropdown.scss
+++ b/client/scss/components/_comments-notification-dropdown.scss
@@ -37,7 +37,6 @@
     background-color: #262626;
     padding: 20px;
     border-radius: 6px;
-    width: 260px;
     box-sizing: border-box;
 
     &__title {
